<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".fragments.AboutFragment">

        <TextView
            android:id="@+id/about_team_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="42dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/about_team_1"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView7" />

        <TextView
            android:id="@+id/about_team_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="60dp"
            android:gravity="center"
            android:text="@string/about_team_2"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView8" />

        <TextView
            android:id="@+id/about_team_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="156dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/about_team_3"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

        <TextView
            android:id="@+id/about_team_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="36dp"
            android:gravity="center"
            android:text="@string/about_team_4"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <TextView
            android:id="@+id/about_team_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/about_team_5"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <TextView
            android:id="@+id/about_team_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="60dp"
            android:gravity="center"
            android:text="@string/about_team_6"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView6" />

        <TextView
            android:id="@+id/about_team_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/about_team_7"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView5" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="161dp"
            android:layout_height="126dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="35dp"
            android:src="@drawable/andrew"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/about_team_1" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="161dp"
            android:layout_height="124dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="35dp"
            android:src="@drawable/joseph"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/about_team_6" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="161dp"
            android:layout_height="125dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="35dp"
            android:src="@drawable/jack"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/about_team_5" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="162dp"
            android:layout_height="126dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="35dp"
            android:src="@drawable/aadil"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/about_team_2" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="159dp"
            android:layout_height="126dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/rachata"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="159dp"
            android:layout_height="126dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="35dp"
            android:src="@drawable/aidan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="159dp"
            android:layout_height="126dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="124dp"
            android:src="@drawable/hamish"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/about_team_4" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>

